--- a/poem.rmd
+++ b/poem.rmd
@@ -23,6 +23,8 @@ poem 1
 
 ## Third Verse
 <!--Put the first two verses of The Walrus and the Carpenter here!-->
+verse 3
+
 
 ## Last Verse
 <!--Put a short poem of your choice 8-20 lines,here!-->
